--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
-
-:root{
+:root {
     --primary-color: #0ef;
     --secondary-color: #001aff;
     --tertiary-color: #c800ff;
@@ -19,31 +16,40 @@
 }
 
 
-*{
+@font-face {
+    font-family: "Nunito";
+    src: url("../fonts/nunito.ttf") format("truetype");
+}
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+a{
+    text-decoration: none;
+}
+
+body {
     min-height: 100vh;
     background-color: #fff;
     background-size: cover;
     background-position: center;
 }
 
-header{
+header {
     width: 100%;
     z-index: 100;
     position: fixed;
     position: absolute;
-    top:0;
-    left:0;
-    background: linear-gradient(45deg, #c800ff,#001aff, #c800ff);
+    top: 0;
+    left: 0;
+    background: linear-gradient(45deg, #c800ff, #001aff, #c800ff);
     backdrop-filter: blur(50px);
 }
 
-.nav{
+.nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -52,40 +58,39 @@ header{
     margin: auto;
 }
 
-.nav__logo{
+.nav__logo {
     width: 50px;
     height: 50px;
     border-radius: 50%;
     object-fit: contain;
 }
 
-.nav__links{
+.nav__links {
     display: flex;
     list-style: none;
-    gap:30px;
+    gap: 30px;
     align-items: center;
 }
 
-.nav__user{
+.nav__user {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap:70px
+    gap: 70px
 }
 
-.nav__user a{
-    text-decoration: none;
+.nav__user a {
     position: relative;
 }
 
-.nav__user a span{
+.nav__user a span {
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 12px;
-    font-family: "Poppins", sans-serif;
+    font-family: "Antic", sans-serif;
     font-weight: bold;
-    color:#fff;
+    color: #fff;
     position: absolute;
     top: -10px;
     right: -10px;
@@ -95,25 +100,14 @@ header{
     border-radius: 100%;
 }
 
-.nav__user a i{
+.nav__user a i {
     font-size: 25px;
-    color:#fff;
+    color: #fff;
 }
 
-.nav__links > h1{
-    font-family: 'Syne Mono', sans-serif;
-    font-weight: bold;
-    font-size: 35px;
-    color:#fff;
-    transform: rotate(-5deg);
-    margin-right: 20px;
-}
-
-.nav__links li a{
-    text-decoration: none;
-    font-family: 'Syne Mono', sans-serif;
-    font-weight: bold;
-    color:#fff;
+.nav__links li a {
+    font-family: 'Poppins', sans-serif;
+    color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -121,32 +115,32 @@ header{
     position: relative;
 }
 
-.nav__links li .active::before{
+.nav__links li .active::before {
     width: 100%;
     left: 0;
 }
 
-.nav__links li a::before{
-    content: ""; 
+.nav__links li a::before {
+    content: "";
     position: absolute;
     bottom: -3px;
-    left: 100%; 
+    left: 100%;
     width: 0;
     height: 3px;
     background-color: #fff;
     transition: width 0.3s ease-in-out, left 0.3s ease-in-out;
 }
 
-.nav__links li a:hover::before{
-    width: 100%; 
+.nav__links li a:hover::before {
+    width: 100%;
     left: 0;
 }
 
-.nav__links li a i{
+.nav__links li a i {
     font-size: 20px;
 }
 
-.link__login{
+.link__login {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -157,46 +151,72 @@ header{
     background-color: transparent;
     border: 1px solid #fff;
     color: #fff;
-    font-family: "Syne Mono", sans-serif;
+    font-family: "Nunito", sans-serif;
     font-weight: bold;
 }
 
-.link__login:hover{
+.link__login:hover {
     background-color: #dfdfdf;
     color: #000;
 }
 
-.image_perfil{
+.image_perfil {
     width: 50px;
     height: 50px;
     border-radius: 50%;
     object-fit: cover;
 }
 
-.container-login{
+.container-login {
     width: 100%;
     height: 100vh;
+    background: linear-gradient(45deg, #0ef, #c800ff);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid red;
 }
 
-.container-login .login{
+.container-login .login__card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 20px;
+    background-color: #dfdfdf;
+    padding: 50px;
+    border-radius: 5px;
+}
+
+.container-login .login__image {
+    margin-right: 25px;
+}
+
+.container-login .login__image img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+    box-shadow: 0 0 10px #dfdfdf;
+}
+
+.container-login .login {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    border-left: 2px solid #c800ff;
 }
 
-.container-login .login .login__title{
-    font-family: 'Poppins', sans-serif;
+.container-login .login .login__title {
+    font-family: 'Nunito', sans-serif;
     font-weight: bold;
     font-size: 30px;
-    color: #fff;
-    text-shadow: 0 0 4px #e7f619;
+    color: #000;
     text-transform: uppercase;
 }
 
-.container-login .login .login__form{
+.container-login .login .login__form {
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -204,25 +224,25 @@ header{
     padding: 40px;
 }
 
-.container-login .login .login__form .form-group{
-    background-color:#ddd;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%; 
-}
-
-.container-login .login .login__form .form-group .login__icon{
+.container-login .login .login__form .form-group {
+    background-color: rgb(216, 211, 211);
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
-    flex:1;
-    background:  linear-gradient(45deg, #0ef, #001aff);
 }
 
-.container-login .login .login__form .form-group .login__icon i{
+.container-login .login .login__form .form-group .login__icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+    flex: 1;
+    background: linear-gradient(45deg, #0ef, #001aff);
+}
+
+.container-login .login .login__form .form-group .login__icon i {
     font-size: 20px;
     color: #fff;
     display: flex;
@@ -230,18 +250,18 @@ header{
     justify-content: center;
 }
 
-.container-login .login .login__form input{
-    flex:4;
-    padding: 15px 20px 15px 0px;
+.container-login .login .login__form input {
+    flex: 4;
+    height: 50px;
     border: none;
     outline: none;
     background-color: transparent;
-    font-family: "Inter", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 15px;
     margin-left: 10px;
 }
 
-.container-login .login .login__form button{
+.container-login .login .login__form button {
     color: #fff;
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
@@ -255,15 +275,62 @@ header{
     justify-content: center;
     gap: 10px;
     font-size: 14px;
-    background:  linear-gradient(45deg, #0ef, #c800ff);
+    background: linear-gradient(45deg, #0ef, #c800ff);
     transition: 0.2s ease;
+    border-radius:30px;
 }
 
-.container-login .login .login__form button:hover{
+.container-login .login .login__form button:hover {
     box-shadow: 0 0 4px #fff;
 }
 
-.container-login .login .login__form button i{
+.container-login .login .login__form button i {
     font-size: 20px;
 }
 
+.login__social{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.login__social a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #fff;
+    color: #000;
+    font-size: 20px;
+    transition: 0.2s ease;
+}   
+
+.login__social .login__social-facebook{
+    background-color: #3b5998;
+    color: #fff;
+}
+
+.login__social .login__social-google{
+    background-color: #db4437;
+    color: #fff;
+}
+
+.login__social .login__social-twitter{
+    background-color: #00acee;
+    color: #fff;
+}
+
+.login__social .login__social-twitter:hover {
+    background-color: #0678a5;
+}
+
+.login__social .login__social-facebook:hover {
+    background-color: #2d4e8e;
+}
+
+.login__social .login__social-google:hover {
+    background-color: #c1351d;
+}
