--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,6 @@ header {
 .nav__user {
     display: flex;
     align-items: center;
-    justify-content: center;
     gap:30px;
 }
 
@@ -84,7 +83,11 @@ header {
     position: relative;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center
+}
+
+.nav__user .link__cart{
+    margin-right:15px;
 }
 
 .nav__user a span {
@@ -193,6 +196,8 @@ header {
 
 .container-login .login__image {
     margin-right: 25px;
+    height: 100%;
+    background-color: #fff;
 }
 
 .container-login .login__image img {
@@ -200,7 +205,6 @@ header {
     height: 100%;
     object-fit: cover;
     border-radius: 5px;
-    box-shadow: 0 0 10px #dfdfdf;
 }
 
 .container-login .login {
@@ -338,7 +342,250 @@ header {
     background-color: #c1351d;
 }
 
+.button-hamburger{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    border:none;
+    background-color: transparent;
+    color:#fff;
+    display: none;
+}
 
-@media(max-width:1000px){
+.nav__user .nav__logo{
+    display: none;
+}
 
+@media(max-width:1080px){
+
+    .nav{
+        flex-direction: column-reverse;
+    }
+
+    .button-hamburger{
+        display: flex;
+    }
+
+    .nav__links{
+        display: none;
+        flex-direction: column;
+        margin: 30px;
+        opacity: 0;
+        transition: opacity 0.7s ease; 
+    }
+
+    .nav__links.active{
+        display: flex;
+        opacity: 1; 
+    }
+
+    .nav__links .nav__logo{
+        display: none;
+    }
+
+    .nav__user{
+        width: 100%;
+        justify-content: end;
+        gap:20px;
+    }
+
+    .nav__user .link__login{
+        padding: 7px 10px;
+        font-size: 12px;
+    }
+
+    .nav__user .nav__logo{
+        display: block;
+        margin-right: auto;
+    }
+
+}
+
+/* Main */
+
+main{
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contenedor-general{
+    width: 80%;
+}
+
+/* SECTION CATEGORIAS */ 
+
+.contenedor-categorias{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 30px;
+    flex-wrap: wrap;
+    margin: 20px;
+}
+
+.contenedor-categorias .categorias__mujer{
+    background-size: cover;
+    background-position: center;
+    background-image: url("../images/category-mujer.jpg") ;
+}
+
+.contenedor-categorias .categorias__hombre{
+    background-size: cover;
+    background-position: center;
+    background-image: url("../images/category-hombre.jpg") ;
+}
+
+.contenedor-categorias .categorias__niños{
+    background-size: cover;
+    background-position: center;
+    background-image: url("../images/category-ninos.jpg") ;
+}
+
+.contenedor-categorias .categorias__acesorios{
+    background-size: cover;
+    background-position: center;
+    background-image: url("../images/category-accesorios.jpg") ;
+
+}
+
+.contenedor-categorias a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    transition: 0.2s ease;
+    width: 270px;
+    height: 270px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #fff;
+    text-transform: uppercase;
+    font-family: "Nunito", sans-serif;
+}
+
+.contenedor-categorias a p{
+    padding: 20px;
+    backdrop-filter: blur(5px);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); 
+}
+
+/* SECTION OFERTAS */
+
+.contenedor-ofertas > h2{
+    font-family: 'Poppins', sans-serif;
+    font-size: 30px;
+    color: #000;
+    text-align: left;
+    margin: 20px;
+    text-transform: uppercase;
+    width: 100%;
+    border-bottom: 2px solid #00acee;
+}
+
+.ofertas__cards{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap;
+    margin: 20px;
+}
+
+.ofertas__cards .card__oferta{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    flex-direction: column;
+    gap: 10px;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    transition: 0.2s ease;
+    width: 270px;
+    height: 450px;
+}
+
+.card__header img{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.card__body{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.card__body .card__body-title{
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    color: #000;
+    font-weight: bold;
+    width: auto;
+    overflow-wrap: break-word; 
+}
+
+.card__body .card__body-text{
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    color: #000;
+    width: auto;
+    overflow-wrap: break-word; 
+}
+
+.card__body .card__body-price-offer{
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    color: #0678a5;
+    font-weight: bold;
+}
+
+.card__body-price-regular{
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    color: #000;
+    text-decoration: line-through;
+}
+
+.card__footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: auto;
+}
+
+.card__footer .button__card{
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #dfdfdf;
+    color: #000;
+    border: none;
+    border-radius: 20px;
+    font-size: 13px;
+}
+
+.card__footer .button__card.cart{
+    color:#fff; 
+    background: linear-gradient(45deg, #0ef, #c800ff);
+}
+
+.card__footer .button__card:hover{
+    background-color: #8709ff;
+    color: #fff;
+}
+
+.card__footer .button__card i{
+    font-size: 20px;
 }
