--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Combo&display=swap');
 
 :root {
     --primary-color: #0ef;
@@ -27,7 +28,7 @@
     box-sizing: border-box;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
@@ -76,7 +77,7 @@ header {
 .nav__user {
     display: flex;
     align-items: center;
-    gap:30px;
+    gap: 30px;
 }
 
 .nav__user a {
@@ -86,8 +87,8 @@ header {
     justify-content: center
 }
 
-.nav__user .link__cart{
-    margin-right:15px;
+.nav__user .link__cart {
+    margin-right: 15px;
 }
 
 .nav__user a span {
@@ -180,7 +181,7 @@ header {
     background: linear-gradient(45deg, #0ef, #c800ff);
     display: flex;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;
 }
 
 .container-login .login__card {
@@ -284,7 +285,7 @@ header {
     font-size: 14px;
     background: linear-gradient(45deg, #0ef, #c800ff);
     transition: 0.2s ease;
-    border-radius:30px;
+    border-radius: 30px;
 }
 
 .container-login .login .login__form button:hover {
@@ -295,7 +296,7 @@ header {
     font-size: 20px;
 }
 
-.login__social{
+.login__social {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -313,19 +314,19 @@ header {
     color: #000;
     font-size: 20px;
     transition: 0.2s ease;
-}   
+}
 
-.login__social .login__social-facebook{
+.login__social .login__social-facebook {
     background-color: #3b5998;
     color: #fff;
 }
 
-.login__social .login__social-google{
+.login__social .login__social-google {
     background-color: #db4437;
     color: #fff;
 }
 
-.login__social .login__social-twitter{
+.login__social .login__social-twitter {
     background-color: #00acee;
     color: #fff;
 }
@@ -342,60 +343,60 @@ header {
     background-color: #c1351d;
 }
 
-.button-hamburger{
+.button-hamburger {
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 30px;
-    border:none;
+    border: none;
     background-color: transparent;
-    color:#fff;
+    color: #fff;
     display: none;
 }
 
-.nav__user .nav__logo{
+.nav__user .nav__logo {
     display: none;
 }
 
-@media(max-width:1080px){
+@media(max-width:1080px) {
 
-    .nav{
+    .nav {
         flex-direction: column-reverse;
     }
 
-    .button-hamburger{
+    .button-hamburger {
         display: flex;
     }
 
-    .nav__links{
+    .nav__links {
         display: none;
         flex-direction: column;
         margin: 30px;
         opacity: 0;
-        transition: opacity 0.7s ease; 
+        transition: opacity 0.7s ease;
     }
 
-    .nav__links.active{
+    .nav__links.active {
         display: flex;
-        opacity: 1; 
+        opacity: 1;
     }
 
-    .nav__links .nav__logo{
+    .nav__links .nav__logo {
         display: none;
     }
 
-    .nav__user{
+    .nav__user {
         width: 100%;
         justify-content: end;
-        gap:20px;
+        gap: 20px;
     }
 
-    .nav__user .link__login{
+    .nav__user .link__login {
         padding: 7px 10px;
         font-size: 12px;
     }
 
-    .nav__user .nav__logo{
+    .nav__user .nav__logo {
         display: block;
         margin-right: auto;
     }
@@ -404,50 +405,122 @@ header {
 
 /* Main */
 
-main{
+.main {
     margin-top: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.contenedor-general{
+.contenedor-general {
     width: 80%;
 }
 
-/* SECTION CATEGORIAS */ 
+/* SECTION POPULARES  */
 
-.contenedor-categorias{
+
+.contenedor-populares {
+    padding: 20px;
     display: flex;
     align-items: center;
-    justify-content: start;
+}
+
+.contenedor-populares button {
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    color: #fff;
+    background: linear-gradient(45deg, #0ef, #c800ff);
+    height: 90px;
+    border-radius: 4px;
+    position: relative;
+}
+
+.contenedor-populares #prevBtn{
+    left: 30px;
+    z-index: 1000;
+}
+
+.contenedor-populares #nextBtn{
+    right: 30px;
+    z-index: 1000;
+}
+
+.contenedor-populares button i {
+    font-size: 40px;
+}
+
+.slider {
+    overflow: hidden;
+    white-space: nowrap;
+    transition: transform 0.5s ease;
+    width: 100%;
+}
+
+.carousel-container {
+    position: relative;
+    width: 90%;
+    height: 500px;
+    /* Altura de pantalla completa */
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+}
+
+.carousel-slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.carousel-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.carousel-slide.active {
+    opacity: 1;
+}
+
+
+/* SECTION CATEGORIAS */
+
+.contenedor-categorias {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 30px;
     flex-wrap: wrap;
     margin: 20px;
 }
 
-.contenedor-categorias .categorias__mujer{
+.contenedor-categorias .categorias__mujer {
     background-size: cover;
     background-position: center;
-    background-image: url("../images/category-mujer.jpg") ;
+    background-image: url("../images/category-mujer.webp");
 }
 
-.contenedor-categorias .categorias__hombre{
+.contenedor-categorias .categorias__hombre {
     background-size: cover;
     background-position: center;
-    background-image: url("../images/category-hombre.jpg") ;
+    background-image: url("../images/category-hombre.webp");
 }
 
-.contenedor-categorias .categorias__niños{
+.contenedor-categorias .categorias__niños {
     background-size: cover;
     background-position: center;
-    background-image: url("../images/category-ninos.jpg") ;
+    background-image: url("../images/category-ninos.webp");
 }
 
-.contenedor-categorias .categorias__acesorios{
+.contenedor-categorias .categorias__acesorios {
     background-size: cover;
     background-position: center;
-    background-image: url("../images/category-accesorios.jpg") ;
+    background-image: url("../images/category-accesorios.webp");
 
 }
 
@@ -466,29 +539,36 @@ main{
     font-weight: bold;
     color: #fff;
     text-transform: uppercase;
-    font-family: "Nunito", sans-serif;
+    font-family: "Inter", sans-serif;
 }
 
-.contenedor-categorias a p{
-    padding: 20px;
-    backdrop-filter: blur(5px);
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); 
+.contenedor-categorias a p {
+    backdrop-filter: blur(2px);
+    border: none;
 }
 
 /* SECTION OFERTAS */
 
-.contenedor-ofertas > h2{
-    font-family: 'Poppins', sans-serif;
-    font-size: 30px;
-    color: #000;
+.contenedor-ofertas {
+    margin-top: 40px;
+}
+
+.contenedor-ofertas>h2 {
+    font-family: "Combo", sans-serif;
+    font-size: 35px;
+    font-weight: bold;
+    color: transparent;
+    background-image: linear-gradient(45deg, #c800ff, #0ef);
+    -webkit-background-clip: text;
+    background-clip: text;
     text-align: left;
     margin: 20px;
     text-transform: uppercase;
     width: 100%;
-    border-bottom: 2px solid #00acee;
+    border-bottom: 3px solid #00acee;
 }
 
-.ofertas__cards{
+.ofertas__cards {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -497,7 +577,7 @@ main{
     margin: 20px;
 }
 
-.ofertas__cards .card__oferta{
+.ofertas__cards .card__oferta {
     display: flex;
     align-items: center;
     justify-content: start;
@@ -506,57 +586,69 @@ main{
     padding: 20px;
     border-radius: 5px;
     background-color: #fff;
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
     transition: 0.2s ease;
     width: 270px;
-    height: 450px;
+    height: 480px;
 }
 
-.card__header img{
+.card__header img {
     width: 200px;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
 }
 
-.card__body{
+.card__body {
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-.card__body .card__body-title{
+.card__body .card__body-title {
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
     color: #000;
     font-weight: bold;
     width: auto;
-    overflow-wrap: break-word; 
+    overflow-wrap: break-word;
 }
 
-.card__body .card__body-text{
+.card__body .card__body-text {
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
     color: #000;
     width: auto;
-    overflow-wrap: break-word; 
+    overflow-wrap: break-word;
 }
 
-.card__body .card__body-price-offer{
+.card__body .card__body-price-offer {
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
     color: #0678a5;
     font-weight: bold;
 }
 
-.card__body-price-regular{
+.card__body .card__body-price-regular {
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
     color: #000;
     text-decoration: line-through;
 }
 
-.card__footer{
+.card__body .card__body-stars {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+    padding: 10px 0px;
+}
+
+.card__body .card__body-stars .starts .light {
+    color: #ded00f;
+}
+
+.card__footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -564,7 +656,7 @@ main{
     margin-top: auto;
 }
 
-.card__footer .button__card{
+.card__footer .button__card {
     padding: 10px 20px;
     display: flex;
     align-items: center;
@@ -576,16 +668,16 @@ main{
     font-size: 13px;
 }
 
-.card__footer .button__card.cart{
-    color:#fff; 
+.card__footer .button__card.cart {
+    color: #fff;
     background: linear-gradient(45deg, #0ef, #c800ff);
 }
 
-.card__footer .button__card:hover{
+.card__footer .button__card:hover {
     background-color: #8709ff;
     color: #fff;
 }
 
-.card__footer .button__card i{
+.card__footer .button__card i {
     font-size: 20px;
 }
