--- a/css/styles.css
+++ b/css/styles.css
@@ -18,11 +18,24 @@
     src: url("../fonts/nunito.ttf") format("truetype");
 }
 
-h1, h2, h3, h4, h5, h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: "Sen", sans-serif;
 }
 
-p, a, button, input, label, span, i{
+p,
+a,
+button,
+input,
+label,
+span,
+i,
+select,
+option {
     font-family: "Quicksand", sans-serif;
     font-weight: 500;
 }
@@ -54,10 +67,9 @@ header {
     width: 100%;
     z-index: 100;
     position: fixed;
-    position: absolute;
     top: 0;
     left: 0;
-    background: linear-gradient(45deg, #c800ff, #001aff, #c800ff);
+    background: linear-gradient(45deg, #c800ff,#001aff,#7986fa, #001aff, #c800ff);
     backdrop-filter: blur(50px);
 }
 
@@ -156,6 +168,33 @@ header {
     font-size: 20px;
 }
 
+.submenu {
+    display: none;
+    position: absolute;
+    background: #8709ff;
+    border: none;
+    z-index: 1000;
+    margin-top: 4px;
+    width: 200px;
+    border-radius: 2px;
+    padding: 15px 10px 15px 10px;
+}
+
+.nav__dropdown:hover .submenu {
+    display: block;
+}
+
+.submenu li {
+    display: block;
+}
+
+.submenu li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 15px;
+    display: block;
+}
+
 .link__login {
     display: flex;
     align-items: center;
@@ -186,7 +225,7 @@ header {
 .container-login {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(45deg, #0ef, #c800ff);
+    background: linear-gradient(45deg, #c800ff,#0ef, #c800ff);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -378,13 +417,13 @@ header {
 
 /* SECTION POPULARES  */
 
-.contenedor-populares {
+.contenedor-carousel {
     padding: 20px;
     display: flex;
     align-items: center;
 }
 
-.contenedor-populares button {
+.contenedor-carousel button {
     border: none;
     padding: 10px;
     cursor: pointer;
@@ -395,29 +434,28 @@ header {
     position: relative;
 }
 
-.contenedor-populares #prevBtn {
+.contenedor-carousel #prevBtn {
     left: 30px;
-    z-index: 1000;
+    z-index: 50;
 }
 
-.contenedor-populares #nextBtn {
+.contenedor-carousel #nextBtn {
     right: 30px;
-    z-index: 1000;
+    z-index: 50;
 }
 
-.contenedor-populares button i {
+.contenedor-carousel button i {
     font-size: 40px;
 }
-
 
 .carousel-container {
     position: relative;
     width: 90%;
     height: 500px;
-    /* Altura de pantalla completa */
     overflow: hidden;
     display: flex;
     flex-direction: row;
+    margin-inline: auto;
 }
 
 .carousel-slide {
@@ -435,7 +473,7 @@ header {
     display: block;
 }
 
-.carousel-slide .carousel-slide__content.slider-1{
+.carousel-slide .carousel-slide__content.slider-1 {
     position: absolute;
     bottom: 0;
     right: 0;
@@ -448,7 +486,7 @@ header {
     border-radius: 5px;
 }
 
-.carousel-slide .carousel-slide__content.slider-2{
+.carousel-slide .carousel-slide__content.slider-2 {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -457,11 +495,11 @@ header {
     padding: 20px;
     backdrop-filter: blur(20px);
     overflow: hidden;
-    background-color: rgba(255, 255, 255, 0.5); 
+    background-color: rgba(255, 255, 255, 0.5);
     border-radius: 5px;
 }
 
-.carousel-slide .carousel-slide__content.slider-3{
+.carousel-slide .carousel-slide__content.slider-3 {
     position: absolute;
     top: 0;
     right: 0;
@@ -474,12 +512,12 @@ header {
     border-radius: 5px;
 }
 
-.carousel-slide .carousel-slide__content h3{
+.carousel-slide .carousel-slide__content h3 {
     font-size: 22px;
     text-transform: uppercase;
     margin-bottom: 20px;
     font-weight: bold;
-    color:#000;
+    color: #000;
 }
 
 .carousel-slide .carousel-slide__content p {
@@ -489,6 +527,7 @@ header {
 
 .carousel-slide .carousel-slide__content a {
     margin-top: 20px;
+    margin-inline: auto;
     padding: 10px 20px;
     display: flex;
     align-items: center;
@@ -498,7 +537,9 @@ header {
     border: none;
     border-radius: 20px;
     font-size: 13px;
+    width: 50%;
     font-weight: bold;
+    text-transform: uppercase;
 }
 
 .carousel-slide .carousel-slide__content a:hover {
@@ -577,7 +618,12 @@ header {
     margin-bottom: 40px;
 }
 
-.contenedor-ofertas>h2 {
+.contenedor-ofertas .contenedor-ofertas__title {
+    border-bottom: 3px solid #00acee;
+    margin-bottom: 20px;
+}
+
+.contenedor-ofertas .contenedor-ofertas__title>h2 {
     font-size: 35px;
     font-weight: bold;
     color: transparent;
@@ -585,10 +631,8 @@ header {
     -webkit-background-clip: text;
     background-clip: text;
     text-align: left;
-    margin: 20px;
     text-transform: uppercase;
     width: 100%;
-    border-bottom: 3px solid #00acee;
 }
 
 .swiper {
@@ -648,14 +692,14 @@ header {
 }
 
 .card__body .card__body-price-offer {
-    
+
     font-size: 20px;
     color: #0678a5;
     font-weight: bold;
 }
 
 .card__body .card__body-price-regular {
-   
+
     font-size: 14px;
     color: #000;
     text-decoration: line-through;
@@ -707,6 +751,91 @@ header {
     font-size: 20px;
 }
 
+/* SECTION POPULARES */
+
+.contenedor-populares {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.contenedor-populares .contenedor-populares__title {
+    display: flex;
+    padding-bottom: 10px;
+    justify-content: space-between;
+    border-bottom: 3px solid #00acee;
+    margin-bottom: 20px;
+}
+
+.custom-select {
+    position: relative;
+    display: inline-block;
+    border-radius: 50px;
+    background: linear-gradient(45deg, #c800ff, #0ef);
+}
+
+.custom-select__content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.custom-select__content .icon-select{
+    flex: 1; 
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.custom-select__content .icon-select i{
+    color:#fff; 
+    font-size: 30px;
+}
+
+.select-selected {
+    padding: 10px;
+    border: none;
+    width: 200px;
+    color:#fff; 
+    text-align: center;
+    flex:3; 
+    text-align: center;
+    font-family: "Quicksand", sans-serif;
+}
+
+.select-items {
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    z-index: 50;
+    width: 100%;
+    margin-top: 5px;
+}
+
+.select-items div {
+    padding: 10px 20px;
+    font-family: "Quicksand", sans-serif;
+}
+
+.select-items div:hover {
+    background-color: #f2f2f2;
+}
+
+.contenedor-populares__title>h2 {
+    font-size: 35px;
+    font-weight: bold;
+    color: transparent;
+    background-image: linear-gradient(45deg, #c800ff, #0ef);
+    -webkit-background-clip: text;
+    background-clip: text;
+    text-align: left;
+    text-transform: uppercase;
+    width: 100%;
+}
+
 @media(max-width:1080px) {
 
     .nav {
@@ -753,23 +882,23 @@ header {
 }
 
 
-@media(max-width:950px){
+@media(max-width:950px) {
 
-    .contenedor-populares .carousel-slide .carousel-slide__content {
+    .contenedor-carousel .carousel-slide .carousel-slide__content {
         left: 0;
         right: 0;
     }
 
 
-    .contenedor-populares .carousel-slide .carousel-slide__content h3 {
+    .contenedor-carousel .carousel-slide .carousel-slide__content h3 {
         font-size: 22px;
     }
 
-    .contenedor-populares .carousel-slide .carousel-slide__content p {
+    .contenedor-carousel .carousel-slide .carousel-slide__content p {
         font-size: 12px;
     }
 
-    .contenedor-populares .carousel-slide .carousel-slide__content a {
+    .contenedor-carousel .carousel-slide .carousel-slide__content a {
         padding: 5px 10px;
         font-size: 10px;
     }
@@ -777,49 +906,49 @@ header {
 
 @media (max-width:800px) {
 
-    .contenedor-populares {
+    .contenedor-carousel {
         width: 100%;
         padding: 0px;
         height: 200px;
         margin-top: 150px;
     }
 
-    .contenedor-populares .carousel-slide .carousel-slide__content {
+    .contenedor-carousel .carousel-slide .carousel-slide__content {
         margin: 10px auto;
         width: 90%;
         padding: 20px;
     }
 
-    .contenedor-populares .carousel-slide .carousel-slide__content h3 {
+    .contenedor-carousel .carousel-slide .carousel-slide__content h3 {
         font-size: 20px;
     }
 
-    .contenedor-populares .carousel-slide .carousel-slide__content p {
+    .contenedor-carousel .carousel-slide .carousel-slide__content p {
         font-size: 12px;
     }
 
-    .contenedor-populares .carousel-slide .carousel-slide__content a {
+    .contenedor-carousel .carousel-slide .carousel-slide__content a {
         padding: 5px 10px;
         font-size: 10px;
     }
 
-    .contenedor-populares button {
+    .contenedor-carousel button {
         height: 45px;
         display: flex;
         align-items: center;
         justify-content: center;
     }
 
-    .contenedor-populares button i {
+    .contenedor-carousel button i {
         font-size: 20px;
     }
 
-    .contenedor-populares #nextBtn {
+    .contenedor-carousel #nextBtn {
         position: absolute;
         right: 20px;
     }
 
-    .contenedor-populares #prevBtn {
+    .contenedor-carousel #prevBtn {
         position: absolute;
         left: 20px;
     }
@@ -851,4 +980,20 @@ header {
         width: 100%;
     }
 
+}
+
+
+@media(max-width:640px){
+
+    .select-selected {
+        width: 100px; 
+    }
+}
+
+@media (max-width:425px){
+    .contenedor-populares__title{
+        display: flex;
+        flex-direction: column;
+        gap:10px; 
+    }
 }
